--- a/projects/Bangun Ruang.html
+++ b/projects/Bangun Ruang.html
@@ -660,13 +660,13 @@
                 document.getElementById('bangun').innerHTML = `
                 <h2 class="heading">${e1.innerHTML}</h2>
                 <div class="column" style="padding-right:20px;">
-                    <img src="images/Bangun Datar/Prisma Segitiga.jpg" width="300"><br>
+                    <img src="images/Bangun Ruang/Prisma Segitiga.jpg" width="300"><br>
                 </div>
                 <div class="column" style="width:75%;">
                     <p>
                     <b>Prisma</b> adalah alas atas dan bawah yang sama. Jenis prisma adalah Prisma Segitiga, Prisma Segiempat (Kubus), dan Tabung. Salah satu jenis prisma adalah Prisma Segitiga.
                     <br><br>
-                    <b>Prisma Segitiga</b> adalah alas atas maupun bawah berbentuk segitiga yang saling berhadapan.
+                    <b>Prisma Segitiga</b> adalah alas atas maupun bawah berbentuk segitiga yang saling berhadapan. Untuk perhitungannya masih belum selesai.
                     </p>
                 </div>
                 <div class="clearfix"></div><br>
